--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,25 @@
-gfxboot (3.2.23-1) UNRELEASED; urgency=low
+gfxboot (3.2.23-1) unstable; urgency=low
 
-  * New upstream release
+  * New upstream release:
+    - translations updated
+    - fine-tuned splash
+    - fixed Khmer menu entry
+    - fixed evil memory corruption bug
+    - added 'share' input field for smb install
+    - some more texts are translatable
+    - Live-CD preparations
+    - adjusted 640x480 fallback layout
+    - added driver update dialog that lets you enter the update file name
+    - better 'welcome' screen
+    - added new 'welcome' screen
+    - translations updated
+    - added NLD & SLES themes
   * last release for monolithic X.org.
   * bump compat level to 5.
   * move to dpatch.
+  * split out SuSE themes.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Apr 2006 22:21:17 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Apr 2006 22:32:26 +0200
 
 gfxboot (3.2.14-2) unstable; urgency=low
 
