--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gfxboot (3.2.23-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+  * tighten depends.
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Apr 2006 22:40:53 +0200
+
 gfxboot (3.2.23-1) unstable; urgency=low
 
   * New upstream release:
