--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-gfxboot (3.2.23-2) UNRELEASED; urgency=low
+gfxboot (3.2.23-2) unstable; urgency=low
 
-  * NOT RELEASED YET
   * tighten depends.
+  * adapt for X.org 7.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Apr 2006 22:40:53 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 16 Apr 2006 21:12:13 +0200
 
 gfxboot (3.2.23-1) unstable; urgency=low
 
