--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gfxboot (3.2.23-3) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 16 Apr 2006 21:20:56 +0200
+
 gfxboot (3.2.23-2) unstable; urgency=low
 
   * tighten depends.
