--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gfxboot (3.2.35-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed,  9 Aug 2006 12:22:05 +0200
+
 gfxboot (3.2.35-1) unstable; urgency=low
 
   * New upstream release:
