--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ gfxboot (3.3.18-1) unstable; urgency=low
   * ABI incompatbile to gfxboot 3.2!
   * 01_x11libs.dpatch is no longer needed.
   * adapt patches.
+  * add libfreetype6-dev to build dependencies, it isn't pulled in implicitly
+    any longer.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun,  3 Dec 2006 15:05:32 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun,  3 Dec 2006 15:13:31 +0100
 
 gfxboot (3.2.35-1) unstable; urgency=low
 
