--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gfxboot (3.3.18-6) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue,  5 Dec 2006 12:12:09 +0100
+
 gfxboot (3.3.18-5) unstable; urgency=low
 
   * gfxboot itself doesn't depend on libhtml-parser-perl, fix the the themes.
