--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,17 @@
+9/2/2007:	v3.3.22
+	- different 'Hindi' spelling
+
+7/2/2007:	v3.3.21
+	- added Gujarati & Marathi translations
+
+7/2/2007:	v3.3.20
+	- added some code to debug monitor detection
+	- language cleanup
+	- added new languages
+
+22/1/2007:	v3.3.19
+	- fix language/keymap setting (#223518)
+
 24/11/2006:	v3.3.18
 	- fixed penguin theme bug (#216991)
 	- lang menu sometimes shows only locale name
