--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-gfxboot (3.3.18-6) UNRELEASED; urgency=low
+gfxboot (3.3.22-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream release:
+    - different 'Hindi' spelling
+    - added Gujarati & Marathi translations
+    - added some code to debug monitor detection
+    - language cleanup
+    - added new languages
+    - fix language/keymap setting
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue,  5 Dec 2006 12:12:09 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 21 Feb 2007 01:02:44 +0100
 
 gfxboot (3.3.18-5) unstable; urgency=low
 
