--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,10 @@
+15/3/2007:	v3.3.24
+	- basic rtl language support
+
+12/3/2007:	v3.3.23
+	- added new languages
+	- two-line panel
+
 9/2/2007:	v3.3.22
 	- different 'Hindi' spelling
 
