--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gfxboot (3.3.24-1) unstable; urgency=low
+
+  * New upstream release (actually a changelog only update...).
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 31 Mar 2007 02:09:23 +0200
+
 gfxboot (3.3.22-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
