--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 gfxboot (3.3.24-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * add VCS control headers.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 31 Mar 2007 02:12:18 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Sep 2007 20:15:32 +0200
 
 gfxboot (3.3.24-1) unstable; urgency=low
 
