--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ gfxboot (3.3.24-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
   * add VCS control headers.
+  * update syntax for Vcs headers in debian/control
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Sep 2007 20:15:32 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 07 Oct 2007 14:42:07 +0200
 
 gfxboot (3.3.24-1) unstable; urgency=low
 
