--- a/debian/changelog
+++ b/debian/changelog
@@ -1,20 +1,36 @@
-gfxboot (3.3.24-2) UNRELEASED; urgency=low
+gfxboot (3.3.39-1) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * New upstream release:
+    - Avi Kivity: SS does not survive switch to PM in KVM (#307194)
+    - 'benventuno' is not really an italian word (#327546)
+    - fixed build
+    - always ask for VBE2 info (to e.g. get 1366x768 listed - #298025)
+    - new welcome screen animation
+    - updated translations
+    - fix livecd mode
+    - new translations
+    - use autohinting for lohit_pa, gulim, FZHeiTi (#299568)
+    - allow to set default values for repository
+    - updated po files
+    - change default lang en -> en_US
+    - adjusted menu texts
+    - no graphics on problematic via boards (#231104)
+    - added Sinhala
+    - moved 'install - XXX' variants into submenu, added 'repair' entry (#293827)
+    - go green
+    - rewrote line edit function
+    - intro aborted if any key pressed (#219570)
+    - added Walloon
   * add VCS control headers.
   * update syntax for Vcs headers in debian/control
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 07 Oct 2007 14:42:07 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 11 Nov 2007 17:47:12 +0100
 
 gfxboot (3.3.24-1) unstable; urgency=low
 
   * New upstream release (actually a changelog only update...).
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 31 Mar 2007 02:09:23 +0200
-
-gfxboot (3.3.22-2) UNRELEASED; urgency=low
-
-  * NOT RELEASED YET
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 21 Feb 2007 01:10:55 +0100
 
