--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 gfxboot (3.3.39-2) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * update to Standards-Version 3.7.3, no changes necessary.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 11 Nov 2007 17:54:51 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 13:50:23 +0100
 
 gfxboot (3.3.39-1) unstable; urgency=low
 
