--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-gfxboot (3.3.39-2) UNRELEASED; urgency=low
+gfxboot (3.3.39-2) unstable; urgency=low
 
-  * NOT RELEASED YET
   * update to Standards-Version 3.7.3, no changes necessary.
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 13:50:23 +0100
