--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gfxboot (3.3.39-3) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 08 Dec 2007 19:25:39 +0100
+
 gfxboot (3.3.39-2) unstable; urgency=low
 
   * update to Standards-Version 3.7.3, no changes necessary.
