--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-gfxboot (3.3.39-3) UNRELEASED; urgency=low
+gfxboot (3.3.39-3) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * update to debhelper compat 6.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 08 Dec 2007 19:25:39 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 18 Jan 2008 23:39:25 +0100
 
 gfxboot (3.3.39-2) unstable; urgency=low
 
