--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gfxboot (3.3.39-4) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 18 Jan 2008 23:42:18 +0100
+
 gfxboot (3.3.39-3) unstable; urgency=low
 
   * update to debhelper compat 6.
