--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-gfxboot (3.3.39-4) UNRELEASED; urgency=low
+gfxboot (3.3.39-4) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * appease lintian and write (C) as © in debian/copyright.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 18 Jan 2008 23:42:18 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 20 Feb 2008 22:40:13 +0100
 
 gfxboot (3.3.39-3) unstable; urgency=low
 
