--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gfxboot (3.3.39-5) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 20 Feb 2008 22:43:13 +0100
+
 gfxboot (3.3.39-4) unstable; urgency=low
 
   * appease lintian and write (C) as © in debian/copyright.
